--- a/pc-configurator/src/styles.css
+++ b/pc-configurator/src/styles.css
@@ -62,6 +62,10 @@ html {
     
 }
 
+.components.active {
+    border: 2px green solid;
+}
+
 .componentLogo {
     display: flex;
     align-items: center;
