--- a/pc-configurator/src/Modal/modalCPU.css
+++ b/pc-configurator/src/Modal/modalCPU.css
@@ -19,63 +19,34 @@
 }
 
 .modal__content {
-    padding: 20px;
+    padding: 80px;
     border-radius: 12px;
     background-color: white;
     transform: scale(0.5);
     transition: 0.4s all;
-    width: 40vmax;
+    height: 600px;
+    width: 1000px;
+    display: flex;
 }
 
 .modal__content.active {
     transform: scale(1);
-}
-
-.contacts {
-    font-size: 40px;
-    top: 0;
-    left: 0;
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-}
-
-.filtr {
-    margin: 10px;
-    border: 2px black solid;
-    flex-direction: column;
-    text-align: left;
-    padding-right: 40px;
-}
-
-.cores {
-    flex-direction: column;
-    text-align: left;
-}
-
-.priceInput {
-    padding: 4px;
     display: flex;
 }
 
-.priceText {
-    margin: 10px;
-}
-
-.emptySpace {
-    width: 100px;
-}
-
-.cpuBox {
-    
-    border-top: 1px gray solid;
-    border-bottom: 1px gray solid;
-}
-
-.cpuBoxes {
-    margin: 10px;
-}
-
-.content {
+.wrapper {
+    border-top: 2px #B3B3B3 solid;
     display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.leftBlock {
+    display: flex;
+}
+
+.scroll {
+    height: 450px; /* Высота блока */
+    overflow-y: scroll; /* Включаем вертикальную прокрутку */
+    overflow-x:hidden;
 }
