--- a/pc-configurator/src/Modal/modalCool.css
+++ b/pc-configurator/src/Modal/modalCool.css
@@ -19,21 +19,34 @@
 }
 
 .modal__content {
-    padding: 20px;
+    padding: 80px;
     border-radius: 12px;
     background-color: white;
     transform: scale(0.5);
     transition: 0.4s all;
-    width: 40vmax;
+    height: 600px;
+    width: 1000px;
+    display: flex;
 }
 
 .modal__content.active {
     transform: scale(1);
+    display: flex;
 }
 
-.contacts {
-    font-size: 24px;
-    top: 0;
-    left: 0;
-    text-align: center;
+.wrapper {
+    border-top: 2px #B3B3B3 solid;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.leftBlock {
+    display: flex;
+}
+
+.scroll {
+    height: 450px; /* Высота блока */
+    overflow-y: scroll; /* Включаем вертикальную прокрутку */
+    overflow-x:hidden;
 }
