--- a/pc-configurator/src/Modal/modalBad.css
+++ b/pc-configurator/src/Modal/modalBad.css
@@ -34,19 +34,35 @@
     display: flex;
 }
 
-.wrapper {
-    border-top: 2px #B3B3B3 solid;
+img.bad {
+    height: 250px;
+    padding-top: 20px;
+}
+
+.badContent {
+    background-color: #F76B6B;
     display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-content: space-between;
+    width: 1000px;
+    border-radius: 12px;
 }
 
-.leftBlock {
-    display: flex;
+.issue {
+    font-family: "Poiret One", sans-serif;
+    margin-top: 40px;
+    padding: 20px;
+    background-color: white;
+    width: 300px;
+    border-radius: 12px;
+    text-align: center;
+    font-size: 20px;
 }
 
-.scroll {
-    height: 450px; /* Высота блока */
-    overflow-y: scroll; /* Включаем вертикальную прокрутку */
-    overflow-x:hidden;
+div.issue {
+    font-weight: 32px;
+}
+
+.inner {
+    justify-content: center;
 }
