--- a/pc-configurator/src/Modal/modalCase.css
+++ b/pc-configurator/src/Modal/modalCase.css
@@ -1,4 +1,4 @@
-.modal {
+.modalc {
     height: 100vh;
     width: 100vmax;
     background-color: rgba(0, 0, 0, 0.4);
@@ -13,12 +13,12 @@
     transition: 0.5s;
 }
 
-.modal.active {
+.modalc.active {
     opacity: 1;
     pointer-events: all;
 }
 
-.modal__content {
+.modalc__content {
     padding: 80px;
     border-radius: 12px;
     background-color: white;
@@ -29,7 +29,7 @@
     display: flex;
 }
 
-.modal__content.active {
+.modalc__content.active {
     transform: scale(1);
     display: flex;
 }
