--- a/pc-configurator/src/Modal/modalGood.css
+++ b/pc-configurator/src/Modal/modalGood.css
@@ -50,3 +50,23 @@
     overflow-y: scroll; /* Включаем вертикальную прокрутку */
     overflow-x:hidden;
 }
+
+.good {
+    font-family: "Poiret One", sans-serif;
+    margin-top: 40px;
+    padding: 20px;
+    background-color: white;
+    width: 300px;
+    border-radius: 12px;
+    text-align: center;
+    font-size: 20px;
+}
+
+.goodContent {
+    background-color: #6CE36A;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 1000px;
+    border-radius: 12px;
+}
